<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_saliormanage"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/setcaptain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/bright_blue"
        android:text="@string/setcap"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/setfirstmate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/bright_blue"
        android:text="@string/setscap"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/getout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/bright_blue"
        android:text="@string/outsailor"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
